Changelog
=========

3.1 (unreleased)
----------------

- Refactor `add_accessor_methods` to be lazily applied (see #110).
- Updated German translation.
- Several improvements to the sample Bootstrap templates.

3.0.2 (2014-09-23)
------------------

- Updated django-sortedm2m to an official release.
- Updated Spanish translation.
- Updated Bootstrap version used in example project.


3.0.1 (2014-09-16)
------------------

- Missed out some templates from the released package.


3.0 (2014-09-15)
----------------

Upgrade notes:

WARNING: IF YOU'RE USING POSTGRESQL AS A DATABASE & DJANGO 1.7, THE LATEST RELEASE OF
DJANGO-SORTEDM2M HAS A BUG. INSTEAD, YOU'LL HAVE TO MANUALLY INSTALL:

pip install -e git://github.com/richardbarran/django-sortedm2m.git@9a609a1c6b790a40a016e4ceadedbb6dd6b92010#egg=sortedm2m



THE FOLLOWING CHANGES BREAK BACKWARDS COMPATIBILITY!

- Django 1.7 comes with a new migrations framework which replaces South - 
  if you continue to use Django 1.6, you'll need to add new settings. Please
  refer in the docs to the installation instructions.
  If you're upgrading to Django 1.7 - upgrade Photologue first, THEN upgrade
  Django.
- The Twitter-Bootstrap templates - previously in 'contrib' - become the default; the
  previous templates are moved to 'contrib'.
- The django-tagging library is no longer maintained by its author. As a consequence,
  it has been disabled - see the docs for more information (page
  https://django-photologue.readthedocs.org/en/latest/pages/customising/settings.html#photologue-enable-tags)
- Support for Django 1.4 and 1.5 has been dropped (Photologue depends on django-sortedm2m,
  which has dropped support for 1.4; and Django 1.5 is no longer supported).
- PHOTOLOGUE_USE_CKEDITOR has been removed.
- Many urls have been renamed; photologue urls now go into their own namespace. See the urls.py
  file for all the changes.

Other changes:

- Support for Amazon S3 to store images (thank you Celia Oakley!).