@@ -3,3 +3,4 @@
 django_photologue.egg-info
 build
 .idea
+example_project/database.sql3
