@@ -7,6 +7,7 @@ Changelog
 - Refactor `add_accessor_methods` to be lazily applied (see #110).
 - Updated German translation.
 - Several improvements to the sample Bootstrap templates.
+- Support CACHEDIR.TAG spec issue #89
 
 3.0.2 (2014-09-23)
 ------------------
